--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,13 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
+  <dependencies>
+    <dependency>
+      <groupId>com.google.code</groupId>
+      <artifactId>kaptcha</artifactId>
+      <version>2.3.2</version>
+    </dependency>
+  </dependencies>
 
   <build>
     <!--防止资源配置导出到target失败-->
